added some topics to paper, possibly done after cleanup.

--- a/paper/G5-T3-paper.bib
+++ b/paper/G5-T3-paper.bib
@@ -39,3 +39,64 @@
 	title = "A New Replay Attack Against Anonymous Communication Networks",
 	year = "2007"
 }
+
+@misc{ murdoch2006,
+	author = "Steven J. Murdoch",
+	title = "Hot or Not: Revealing Hidden Services by their Clock Skew",
+	year = "2006"
+}
+
+@misc{ syverson2006,
+	author = "Lasse Oeverlier and Paul Syverson",
+	title = "Locating Hidden Servers",
+	year = "2006"
+}
+
+@misc{ biryukov2013,
+	author = "Alex Biryukov and Ivan Pustogarov and Ralf-Philipp Weinmann",
+	title = "Trawling for Tor Hidden Services: Detection, Measurement, Deanonymization",
+	year = "2013"
+}
+
+@misc{ zantout2011,
+	author = "Bassam Zantout and Ramzi A. Haraty",
+	title = "I2P Data Communication System",
+	year = "2011"
+}
+
+@misc{ olivier2011,
+	author = "Juan Pablo Timpanaro and Chrisment Isabelle and Festor Olivier",
+	title = "Monitoring the I2P network",
+	year = "2011"
+}
+
+@misc{ garlic,
+  title = "Garlic Routing and ``Garlic'' Terminology",
+  howpublished = "https://geti2p.net/en/docs/how/garlic-routing",
+  note = "Accessed: 2015-01-17"
+}
+
+@misc{ i2p,
+  title = "I2P - Supported Applications",
+  howpublished = "https://geti2p.net/en/docs/applications/supported",
+  note = "Accessed: 2015-01-17"
+}
+
+@misc{ crenshaw2011,
+	author = "Adrian Crenshaw",
+	title = "Darknets and hidden servers: Identifying the true IP/network identity of I2P service hosts",
+	year = "2011"
+}
+
+@misc{ egger2013,
+	author = "Christoph Egger and Johannes Schlumberger and Christopher Kruegel and Giovanni Vigna",
+	title = "Practical Attacks against the I2P Network",
+	year = "2013"
+}
+
+@misc{ craven2010,
+	author = "Ryan Craven and Christopher Abbott and Harikrishnan Bhanu and Juan Deng and R. R. Brooks",
+	title = "Orwell Was an Optimist",
+	year = "2010"
+}
+
